--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@ text-decoration: none;
 
 <div class="col-3 col-s-3 menu">
   <ul>
-    <a href="filme/filme.html"><li>Filmes</li></a>
-    <a href="serie/serie.html"><li>Séries</li></a>
-    <a href="video/video.html"><li>Videoclipes</li></a>
+    <a href="filmes.html"><li>Filmes</li></a>
+    <a href="series.html"><li>Séries</li></a>
+    <a href="videos.html"><li>Videoclipes</li></a>
   </ul>
 </div>
 
