--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
-<title>Streamindie</title>
+<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
+<title>Streamndie</title>
 <style>
+.des {
+  font-family: 'Crimson Text', serif;
+  font-size: 23px;
+}
 * {
     box-sizing: border-box;
 }
@@ -96,7 +101,7 @@ text-decoration: none;
 <body>
 
 <div class="header">
-  <h1>Streamindie</h1>
+  <h1>Streamndie</h1>
 </div>
 
 <div class="row">
@@ -106,34 +111,30 @@ text-decoration: none;
     <a href="filmes.html"><li>Filmes</li></a>
     <a href="series.html"><li>Séries</li></a>
     <a href="videos.html"><li>Videoclipes</li></a>
+    <a href="aprenda.html"><li>Aprenda</li></a>
   </ul>
 </div>
 
 <div class="col-6 col-s-9">
-  <h1>The City</h1>
-  <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-  <video width="400" controls>
-    <source src="mov_bbb.mp4" type="video/mp4">
-    <source src="mov_bbb.ogg" type="video/ogg">
-    Your browser does not support HTML5 video.
-  </video>
-</div>
+  <h1>Feijão</h1>
+  <p class="des">A vida de um garoto na escola que se mete em altas aventuras.</p>
+  <iframe src="https://player.vimeo.com/video/239507855?title=0&byline=0&portrait=0" width="600" height="338" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
 
 <div class="col-3 col-s-12">
   <div class="aside">
     <h2>O que é?</h2>
-    <p>Chania is a city on the island of Crete.</p>
+    <p>Uma "rede social" para assistir a séries e vídeos em alta qualidade sem sair de casa.</p>
     <h2>Como funciona?</h2>
-    <p>Crete is a Greek island in the Mediterranean Sea.</p>
-    <h2>Porque usar?</h2>
-    <p>You can reach Chania airport from all over Europe.</p>
+    <p>Acesse o menu da esquerda para achar algo que goste.</p>
+    <h2>O que temos?</h2>
+    <p>Temos séries, videoclipes, filmes e conteúdo educativo para todos os públicos.</p>
   </div>
 </div>
 
 </div>
 
 <div class="footer">
-  <p>Resize the browser window to see how the content respond to the resizing.</p>
+  <p>Streamndie - 2017</p>
 </div>
 
 </body>
